# pazufa-scraper-be

./: .dockerignore  .gitignore  .ignore  .pre-commit-config.yaml  Dockerfile  README.md  openapi-python-client-config.yaml  pyproject.toml  scrapy.cfg
.woodpecker/: build-and-publish-image.yaml  lint-format.yaml  quality-control.yaml
docker/: README.md  error.txt  find-digest.sh  mac.Dockerfile
docs/: scrapy-observability.md
pazufa_api_client/: README.md  pyproject.toml
pazufa_api_client/ltzf_api_client/: __init__.py
pazufa_api_client/ltzf_api_client/api/authentifizierung/: auth_delete.py  auth_listing.py  auth_listing_keytag.py  auth_post.py  auth_rotate.py  auth_status.py
pazufa_api_client/ltzf_api_client/api/miscellaneous/: autoren_delete_by_param.py  autoren_get.py  autoren_put.py  dokument_delete_id.py  dokument_get_by_id.py  dokument_put_id.py  enum_delete.py  enum_get.py  enum_put.py  gremien_delete_by_param.py  gremien_get.py  gremien_put.py
pazufa_api_client/ltzf_api_client/api/sitzung/: kal_date_put.py  sid_put.py  sitzung_delete.py
pazufa_api_client/ltzf_api_client/api/unauthorisiert/: ping.py  status.py
pazufa_api_client/ltzf_api_client/api/vorgang/: vorgang_delete.py  vorgang_id_put.py  vorgang_put.py
pazufa_api_client/ltzf_api_client/models/: __init__.py  api_key_status.py  api_key_status_scope.py  auth_listing_keytag_response_200.py  autor.py  autoren_put_body.py  autoren_put_body_replacing_item.py  create_api_key.py  create_api_key_scope.py  doktyp.py  dokument.py  enum_put_body.py  enum_put_body_replacing_item.py  enumeration_names.py  gremien_put_body.py  gremien_put_body_replacing_item.py  gremium.py  lobbyregeintrag.py  parlament.py  rotation_response.py  sitzung.py  station.py  stationstyp.py  top.py  touched_by_item.py  vg_ident.py  vorgang.py  vorgangstyp.py
pazufa_api_client/pazufa_api_client/: __init__.py
pazufa_api_client/pazufa_api_client/api/authentifizierung/: auth_delete.py  auth_listing.py  auth_listing_keytag.py  auth_post.py  auth_rotate.py  auth_status.py
pazufa_api_client/pazufa_api_client/api/miscellaneous/: autoren_delete_by_param.py  autoren_get.py  autoren_put.py  dokument_delete_id.py  dokument_get_by_id.py  dokument_put_id.py  enum_delete.py  enum_get.py  enum_put.py  gremien_delete_by_param.py  gremien_get.py  gremien_put.py
pazufa_api_client/pazufa_api_client/api/sitzung/: kal_date_put.py  sid_put.py  sitzung_delete.py
pazufa_api_client/pazufa_api_client/api/unauthorisiert/: ping.py  status.py
pazufa_api_client/pazufa_api_client/api/vorgang/: vorgang_delete.py  vorgang_id_put.py  vorgang_put.py
pazufa_api_client/pazufa_api_client/models/: __init__.py  api_key_status.py  api_key_status_scope.py  auth_listing_keytag_response_200.py  autor.py  autoren_put_body.py  autoren_put_body_replacing_item.py  create_api_key.py  create_api_key_scope.py  doktyp.py  dokument.py  dokument_get_by_id_format.py  dokument_get_format.py  dokument_hash_type_1_item.py  dokument_hash_type_1_item_strategy.py  enum_put_body.py  enum_put_body_replacing_item.py  enumeration_names.py  ftm_dokument_pages.py  ftm_dokument_pages_address_entity.py  ftm_dokument_pages_ancestors_item.py  ftm_dokument_pages_candidate_similars_item.py  ftm_dokument_pages_court_case_item.py  ftm_dokument_pages_documented_by.py  ftm_dokument_pages_match_similars_item.py  ftm_dokument_pages_mentioned_entities_item.py  ftm_dokument_pages_note_entities.py  ftm_dokument_pages_proof.py  ftm_dokument_pages_proven_intervals_item.py  ftm_dokument_pages_proven_item.py  ftm_dokument_pages_related_entities_item.py  ftm_dokument_pages_risks_item.py  ftm_dokument_pages_sanctions_item.py  ftm_dokument_pages_unknown_link_from.py  ftm_dokument_pages_unknown_link_to.py  gremien_put_body.py  gremien_put_body_replacing_item.py  gremium.py  lobbyregeintrag.py  mime.py  (+14 more)
pazufa_scraper_be/: constants.py  mattermost.py  settings.py
pazufa_scraper_be/pardok/: __init__.py  dokument.py  url.py  utils.py  vorgang.py
pazufa_scraper_be/pipelines/: __init__.py  _base.py  counter_names.py  errors.py  stats_counter.py  submit.py
pazufa_scraper_be/pipelines/build_vorgang/: __init__.py  _build_pazufa_dokument.py  build_pazufa_dokument.py  build_vorgang.py  rules.py  utils.py
pazufa_scraper_be/pipelines/documents/: __init__.py  add_additional_urls.py  build_pazufa_vorgang.py  download.py  extract_text.py  fix_and_add_urls.py  fix_missing_urls.py  remove_broken_urls.py  summarize_text.py  utils.py
pazufa_scraper_be/pipelines/documents/utils/: build.py
pazufa_scraper_be/spiders/: gesetz_vorgang.py  utils.py
scraper_BE/: model.py  pardok.py  settings.py  utils.py
scraper_BE/pipelines/: __init__.py  _base.py  errors.py  submit.py
scraper_BE/pipelines/documents/: __init__.py  add_additional_urls.py  build_pazufa_vorgang.py  download.py  extract_text.py  fix_missing_urls.py  summarize_text.py
scraper_BE/pipelines/documents/utils/: build.py
scraper_BE/spiders/: gesetz_vorgang.py  utils.py
tests/unit/: conftest.py
tests/unit/pazufa_scraper_be/: conftest.py  helpers.py  test_mattermost.py
tests/unit/pazufa_scraper_be/pardok/: test_dokument.py  test_url.py  test_utils.py  test_vorgang.py
(+4 files in other folders)
