[project]
name = "pazufa-scraper-be"
version = "0.0.1"
description = "A scraper that extracts data about the Abgeordnetenhaus von Berlin and supplies it to the PaZuFa."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Sebastian Jäger", email = "git@sebastian-jaeger.me" }]
dependencies = [
  "kreuzberg>=4.9.7",
  "pazufa-corelib>=0.1.1",
  "pydantic>=2.13.4",
  "python-magic>=0.4.27",
  "scrapy>=2.16.0",
]

[dependency-groups]
dev = [
  "jupyterlab>=4.5.7",
  "jupyterlab-vim>=4.1.4",
  "prek>=0.4.3",
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.15",
  "ty>=0.0.40",
  "types-lxml>=2026.2.16",
]

[tool.coverage.run]
source = ["pazufa_scraper_be"]
branch = true

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 160
target-version = "py312"
fix = true
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
  "ALL",  # Include all the rules, including new ones
]
ignore = [
  "FIX",  # Temporary developer notes should not break actions
  "COM812",  # For compatibility with ruff-format
  "ISC001",  # For compatibility with ruff-format
  "ISC003",  # Do not implicitly concatenate strings
  "S311",  # We do not require cryptographically-sound randomness
  "D100",  # Do not document public modules
  "D104",  # Do not document public packages
  "TD003",  # Allow TODOs without links
  "S101",  # Allow testing methods
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
  "F401",  # Unused imports in __init__ files can make sense
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.environment]
python-version = "3.12"
